test_suite/tests/compile_fail/tuple_struct_multiple_fields.rs
use ronky::Exported;

#[derive(Exported)]
struct MultiField(String, i32);

fn main() {}
